<resources>
    <string name="special0themename_marineblue" translatable="false">MarineBlue</string>
    <string name="special0themename_camo" translatable="false">Camo</string>
    <string name="special0themename_dark" translatable="false">Dark</string>
    <string name="special0themename_light" translatable="false">Light</string>
    <string name="special0app_name" translatable="false">Canora</string>
    <string name="main_placeholder0search">Search…</string>
    <string name="main_text0controlsBy">%1$s by %2$s</string>
    <string name="main_notfound0noPlaylists">No Playlists found</string>
    <string name="main_notfound0noTracks">No Tracks found</string>
    <string name="main_notfound0noAlbums">No Albums found</string>
    <string name="main_notfound0noArtists">No Artists found</string>
    <string name="main_notfound0noGenres">No Genres found</string>
    <string name="main_notfound0stringNotFound">\"%1$s\" not found</string>
    <string name="main_notfound0soundcloudSearch">Enter text to search on SoundCloud…</string>
    <string name="main_notfound0loading">Loading…</string>
    <string name="main_toolbar_title0tracks">Tracks</string>
    <string name="main_toolbar_title0playlists">Playlists</string>
    <string name="main_toolbar_title0albums">Albums</string>
    <string name="main_toolbar_title0artists">Artists</string>
    <string name="main_toolbar_title0genres">Genres</string>
    <string name="main_toolbar_title0sc">SoundCloud</string>
    <string name="main_toolbar_title0youtube">YouTube</string>
    <string name="main_toolbar_title0youtube_dl">YouTubeDL</string>
    <string name="main_toolbar_title0radio">Web Radio</string>
    <string name="main_toolbar_title0subplaylist">Playlists / %1$s</string>
    <string name="main_toolbar_title0subalbum">Albums / %1$s</string>
    <string name="main_toolbar_title0subartist">Artists / %1$s</string>
    <string name="main_toolbar_title0subgenre">Genres / %1$s</string>
    <string name="main_toolbar_title0subchart">SoundCloud / %1$s</string>
    <string name="main_toast_text0addedItems">Added %1$d items to %2$s</string>
    <string name="main_toast_text0deletedItemsFrom">Deleted %1$d items from %2$s</string>
    <string name="main_toast_text0deletedItems">Deleted %1$d items</string>
    <string name="main_toast_text0deletedPlaylists">Deleted %1$d Playlists</string>
    <string name="main_toast_text0deletedPlaylist">Deleted %1$s</string>
    <string name="main_toast_text0createdPlaylist">Created Playlist %1$s with %2$d items</string>
    <string name="main_toast_text0successWritingFile">Successfully wrote file:\n %1$s</string>
    <string name="main_toast_text0errorWritingFile">Failed writing file:\n %1$s</string>
    <string name="main_toast_text0editedPlaylist">Successfully edited Playlist</string>
    <string name="main_toast_text0editPlaylistFailed">Failed to edit Playlist</string>
    <string name="main_toast_text0failedPlayingFile">Error playing file:\n%1$s</string>
    <string name="main_dialog_delfpl_title0deleteFilesFromPlaylist">Delete files from Playlist</string>
    <string name="main_dialog_delfpl_text0deleteFilesFromPlaylistConfirmation">Do you really want to delete %1$d files
        from the Playlist?
    </string>
    <string name="main_dialog_createpl_title0createPlaylist">Create Playlist</string>
    <string name="main_dialog_createpl_placeholder0name">Name</string>
    <string name="main_dialog_createpl_button0back">Back</string>
    <string name="main_dialog_deletepl_title0deletePlaylists">Delete Playlists</string>
    <string name="main_dialog_deletepl_text0deleteConfirmation">Do you really want to delete %1$d Playlists?</string>
    <string name="main_dialog_sortopt_title0sortingOptions">Sorting Options</string>
    <string name="main_dialog_sortopt_header0sortBy">Sort by</string>
    <string name="main_dialog_sortopt_header0sortDirection">Sort direction</string>
    <string name="main_dialog_sortopt_header0sortingTechnique">Sorting technique</string>
    <string name="main_dialog_sortopt_spinner_item0title">Title</string>
    <string name="main_dialog_sortopt_spinner_item0artist">Artist</string>
    <string name="main_dialog_sortopt_spinner_item0upwards">Upwards</string>
    <string name="main_dialog_sortopt_spinner_item0downwards">Downwards</string>
    <string name="main_dialog_sortopt_spinner_item0alphabetic">Alphabetic</string>
    <string name="main_dialog_sortopt_spinner_item0numeric">Numeric</string>
    <string name="main_dialog_filteropt_title0searchOptions">Search Options</string>
    <string name="main_dialog_filteropt_header0searchBy">Search by</string>
    <string name="main_dialog_filteropt_spinner_item0title">Title</string>
    <string name="main_dialog_filteropt_spinner_item0artist">Artist</string>
    <string name="main_dialog_filteropt_spinner_item0titleArtist">Title / Artist</string>
    <string name="main_dialog_filteropt_spinner_item0any">Any</string>
    <string name="main_dialog_exit_title0closeCanora">Close Canora</string>
    <string name="main_dialog_exit_text0exitConfirmation">Do you really want to quit Canora?</string>
    <string name="main_dialog_exit_button0yes">Yes</string>
    <string name="main_dialog_exit_button0no">No</string>
    <string name="main_dialog_exit_button0minimize">Minimize</string>
    <string name="main_dialog_yn_button0yes">Yes</string>
    <string name="main_dialog_yn_button0no">No</string>
    <string name="main_dialog_volume_header0volume">Volume</string>
    <string name="main_dialog_error_title0error">Error</string>
    <string name="main_dialog_error_text0permissionDenied">You denied permission to read external storage, thus Canora
        cannot find your awesome songs.\n\nTo use the app please grant the requested permission.
    </string>
    <string name="main_dialog_error_text0screenSize">Your device does not meet the minimum requirements for the Screen
        Size ( %1$d x %2$d ). Some of the apps functionality might not be working correctly.
    </string>
    <string name="main_dialog_warning_pl_title0warning">Warning</string>
    <string name="main_dialog_warning_pl_text0playlistsWillChange">Playlists are still an experimental feature of
        Canora, therefore you may experience issues.\n\nWith version 1.0 playlists will always be backwards compatible.
        Before version 1.0 backwards compatibility may break with new features.
    </string>
    <string name="main_popup_context_item0select">Select</string>
    <string name="main_popup_context_item0edit">Edit</string>
    <string name="main_popup_context_item0delete">Delete</string>
    <string name="main_popup_context_item0info">Info</string>
    <string name="main_popup_context_item0downloadAudio">Download Audio</string>
    <string name="main_popup_context_item0downloadVideo">Download Video</string>
    <string name="main_popup_options_item0settings">Settings</string>
    <string name="main_popup_options_item0sort">Sort Options</string>
    <string name="main_popup_options_item0filteroptions">Search Options</string>
    <string name="main_popup_options_item0addTo">Add to…</string>
    <string name="main_popup_options_item0select">Select</string>
    <string name="main_popup_options_item0editplaylist">Edit Playlist</string>
    <string name="main_popup_options_item0selectAll">Select all</string>
    <string name="main_popup_options_item0deselectAll">Deselect all</string>
    <string name="main_popup_options_item0cancelSelect">Cancel selection</string>
    <string name="main_popup_options_item0delete">Delete</string>
    <string name="main_popup_addto_prompt0addTo">Add to…</string>
    <string name="main_popup_addto_item0newPlaylist">New Playlist</string>
    <string name="main_navigation_header0device">Local Device</string>
    <string name="main_navigation_header0soundcloud">SoundCloud</string>
    <string name="main_navigation_header0youtube">YouTube</string>
    <string name="main_navigation_item_title0youtube_search_videos">Search Videos</string>
    <string name="main_navigation_item_title0youtube_search_playlists">Search Playlists</string>
    <string name="main_navigation_item_title0youtube_dl">YouTubeDL</string>
    <string name="main_navigation_header0radio">Web Radio</string>
    <string name="main_navigation_item_title0radio_charts">Most Popular</string>
    <string name="main_navigation_item_title0radio_search">Search</string>
    <string name="main_navigation_item_title0search">Search</string>
    <string name="main_navigation_item_title0charts">Charts</string>
    <string name="main_navigation_item_title0comingSoon">Coming soon…</string>
    <string name="main_navigation_item_title0tracks">Tracks</string>
    <string name="main_navigation_item_title0playlists">Playlists</string>
    <string name="main_navigation_item_title0albums">Albums</string>
    <string name="main_navigation_item_title0artists">Artists</string>
    <string name="main_navigation_item_title0genres">Genres</string>
    <string name="main_navigation_item_title0settings">Settings</string>
    <string name="main_navigation_item_title0store">Store</string>
    <string name="main_navigation_item_title0rate">Rate this App</string>
    <string name="main_navigation_item_title0appInfo">App info</string>
    <string name="main_check_url">Check URL</string>
    <string name="main_add_stream_to_playlist">Add to Playlist</string>
    <string name="main_download_audio">Download Audio</string>
    <string name="main_download_video">Download Video</string>
    <string name="main_download_successful">Download Successful</string>
    <string name="main_download_failed">Download Failed: %1$s</string>
    <string name="main_check_failed">Url Check Failed: %1$s</string>
    <string name="main_connection_failed">Connection Failed: %1$s</string>
    <string name="main_soundcloud_clientidchange">Updated SoundCloud clientID: %1$s</string>
    <string name="main_downloaditem_eta">%1$d seconds</string>
    <string name="main_streamtitle">Title: %1$s</string>
    <string name="main_streamsize">Size: %1$d bytes</string>
    <string name="main_streamsize_kb">Size: %1$.2f kb</string>
    <string name="main_streamsize_mb">Size: %1$.2f mb</string>
    <string name="main_streamsize_gb">Size: %1$.2f gb</string>
    <string name="main_streamlength">Duration: %1$d Seconds</string>
    <string name="main_streamlength_minutes">Duration: %1$d m %2$d s</string>
    <string name="main_streamlength_hours">Duration: %1$d h %2$d m %3$d s</string>
    <string name="editor_audio_toolbar_title0edit">Edit %1$s</string>
    <string name="editor_audio_header0title">Title</string>
    <string name="editor_audio_header0artist">Artist</string>
    <string name="editor_audio_header0album">Album</string>
    <string name="editor_audio_header0genre">Genre</string>
    <string name="editor_audio_header0filepath">Uri</string>
    <string name="editor_audio_menu_item0apply">Apply</string>
    <string name="editor_audio_menu_item0delete">Delete</string>
    <string name="editor_playlist_toolbar_title0editPlaylist">Edit %1$s</string>
    <string name="editor_playlist_header0title">Title</string>
    <string name="editor_playlist_menu_item0apply">Apply</string>
    <string name="editor_playlist_menu_item0delete">Delete</string>
    <string name="editor_playlist_toast_text0selectedImageTooLarge">Selected image is too large.\nMaximum size allowed:
        %1$d MB
    </string>
    <string name="editor_playlist_dialog0processingimage">Processing image …</string>
    <string name="loadingscreen_text0loadingData">Loading data</string>
    <string name="iap_dialog_storeph_title0store">Store</string>
    <string name="iap_dialog_storeph_text0comingSoon">Coming Soon!</string>
    <string name="settings_header0developerMode">Developer Mode</string>
    <string name="settings_header0mediaSessionCallback">Media Session Callbacks</string>
    <string name="settings_button0resetSettings">Reset Settings</string>
</resources>