<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nav_button_tracks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/outline_audiotrack_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0tracks"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_playlists"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/outline_queue_music_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0playlists"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_albums"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/outline_album_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0albums"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_artists"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/outline_recent_actors_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0artists"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_genres"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/outline_library_music_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0genres"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?onColorPrimary" />

    <RelativeLayout
        android:id="@+id/nav_button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_build_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0settings"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_rate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_star_half_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0rate"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_button_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_content_item_height"
        android:background="@drawable/nav_button_background">

        <ImageView
            android:layout_width="@dimen/nav_content_item_height"
            android:layout_height="@dimen/nav_content_item_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_info_white_48dp"
            app:tint="?onColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigation_item_title0appInfo"
            android:textColor="?onColorPrimary"
            android:textSize="@dimen/nav_content_item_textSize" />
    </RelativeLayout>
</LinearLayout>