<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?colorPrimary">
    <TextView android:id="@+id/title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/main_dialog_sortopt_title0sortingOptions"
              android:textColor="?onColorPrimaryAlt"
              android:textSize="22dp"
              android:background="?colorPrimaryAlt"
              android:paddingBottom="10dp"
              android:paddingTop="10dp"/>
    <LinearLayout android:id="@+id/content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/title"
                  android:orientation="vertical">
        <TextView android:id="@+id/title_sortby"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/main_dialog_sortopt_header0sortBy"
                  android:textColor="?onColorPrimary"
                  android:gravity="center"
                  android:layout_marginTop="5dp"/>
        <RelativeLayout android:id="@+id/background_sortby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
            <Spinner android:id="@+id/spinnerSortby"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?onColorPrimary"
                     android:popupBackground="?colorPrimaryAlt"/>
        </RelativeLayout>
        <TextView android:id="@+id/title_sortdir"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/main_dialog_sortopt_header0sortDirection"
                  android:textColor="?onColorPrimary"
                  android:gravity="center"/>
        <RelativeLayout android:id="@+id/background_sortdir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
            <Spinner android:id="@+id/spinnerSortdir"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?onColorPrimary"
                     android:popupBackground="?colorPrimaryAlt"/>
        </RelativeLayout>
        <TextView android:id="@+id/title_sorttech"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/main_dialog_sortopt_header0sortingTechnique"
                  android:textColor="?onColorPrimary"
                  android:gravity="center"/>
        <RelativeLayout android:id="@+id/background_sorttech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
            <Spinner android:id="@+id/spinnerSorttech"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?onColorPrimary"
                     android:popupBackground="?colorPrimaryAlt"/>
        </RelativeLayout>
    </LinearLayout>
    <Button android:id="@+id/okbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:textSize="15sp"
            android:textColor="?onColorPrimaryAlt"
            android:background="@drawable/dialog_button_background"
            android:layout_below="@id/content"/>
</RelativeLayout>